--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,7 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# Visual Studio Code
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
